--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Login_register_test1">
-        <activity android:name="com.example.login_register.MainActivity" />
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name="com.example.login_register.MainActivity"
+
+            />
         <activity android:name="com.example.login_register.login_new"></activity>
+
 
         <activity android:name="com.example.login_register.register">
 
