--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,18 +30,30 @@ android {
 }
 
 dependencies {
-    implementation "com.google.android.material:material:1.1.0-beta01"
+
+  
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
-    implementation 'com.google.firebase:firebase-auth:20.0.0'
+    implementation 'com.google.firebase:firebase-auth:19.4.0'
     implementation 'com.google.firebase:firebase-firestore:22.0.0'
     implementation 'com.google.firebase:firebase-database:19.5.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    // FirebaseUI for Firebase Realtime Database
+    implementation 'com.firebaseui:firebase-ui-auth:7.0.0'
+    implementation 'com.firebaseui:firebase-ui-database:7.0.0'
+    implementation 'com.google.android.material:material:1.3.0-alpha03'
+
+
+    implementation "androidx.recyclerview:recyclerview:1.2.0-alpha06"
+    // For control over item selection of both touch and mouse driven selection
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0-rc03"
+
 
 }
