--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
-        <activity android:name=".FindActivity2" android:parentActivityName=".MainActivity"></activity>
+        <activity android:name=".MessasgeActivity" android:parentActivityName=".MainActivity"></activity>
+        <activity
+            android:name=".FindActivity2"
+            android:parentActivityName=".MainActivity" />
         <activity android:name=".SettingsActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".login_new" />
