--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
-        <activity android:name=".MessasgeActivity" android:parentActivityName=".MainActivity"></activity>
+
+        <activity
+            android:name=".MessasgeActivity"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".FindActivity2"
             android:parentActivityName=".MainActivity" />
         <activity android:name=".SettingsActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".login_new" />
-        <activity android:name=".register">
+        <activity android:name=".register" />
+        <activity android:name=".logoApp"  android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
