--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,12 +28,16 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
+dependencies {
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+}
 
 dependencies {
 
   
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
@@ -54,6 +58,9 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.2.0-alpha06"
     // For control over item selection of both touch and mouse driven selection
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0-rc03"
+    implementation "com.yuyakaido.android:card-stack-view:2.3.4"
+
+
 
 
 }
